[package]
name = "downcast-trait"
version = "0.1.0"
authors = ["Frederik M. J. Vestre <freqmod@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description="Allow casting between traits."
repository = "https://github.com/freqmod/downcast_trait"
categories = ["rust-patterns"]
keywords = ["trait", "cast", "any"]
include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md"]

[dependencies]



[features]
std = []
default = ["std"]